--- a/src/styles/rooms-timetable.css
+++ b/src/styles/rooms-timetable.css
@@ -15,17 +15,11 @@
   align-items: end;
 }
 
-.rooms {
-  grid-row: 2;
-  display: grid;
-  grid-template-rows: repeat(4, 58px);
-  align-items: center;
-}
-
 .events {
-  grid-row: 2;
+  /*grid-row: 2;*/
   position: relative;
   display: grid;
+  background: #F6F7F9;
 }
 
 .eventsArea::before {
@@ -39,16 +33,60 @@
     to right,
     transparent,
     transparent 60px,
-    black 60px,
-    black 61px
+    rgba(19,100,205,0.1) 60px,
+    rgba(19,100,205,0.1) 61px
   );
   background-size: 100% 100%;
+  pointer-events: none;
 }
 
 .roomEvents {
   display: flex;
+  /*grid-column: 2;*/
+  align-items: flex-end;
+  border-bottom: 2px solid #E9ECEF;
 }
 
 .eventsArea {
   height: 0px;
 }
+
+.room {
+  /*grid-column: 1;*/
+  background-color: #fff;
+  z-index: 10;
+}
+
+.wrapper {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(2, minmax(58px, auto));
+  grid-template-columns: repeat(2, 2fr);
+  grid-column: 1 / 2 span;
+  background-color: #F7F8F9;
+}
+
+.floor {
+  font-size: 11px;
+  color: #858E98;
+  letter-spacing: 0.4px;
+  padding: 16px 16px 8px;
+  z-index: -1;
+  text-transform: uppercase;
+}
+
+
+@media screen and (max-width: 460px) {
+  .room {
+    min-width: 245px;
+    border-bottom: 2px solid #E9ECEF;
+  }
+  .dateSwitcher {
+    max-width: 245px;
+  }
+  .floor {
+    background-color: #F7F8F9;
+  }
+}
+
+
