--- a/src/styles/rooms-timetable.css
+++ b/src/styles/rooms-timetable.css
@@ -15,6 +15,16 @@
   align-items: end;
 }
 
+.time {
+  min-width: 49px;
+  margin-left: 28px;
+  padding: 9px 0px 10px 0;
+  text-align: center;
+  font-size: 11px;
+  color: #858E98;
+  letter-spacing: 0.4px;
+}
+
 .events {
   /*grid-row: 2;*/
   position: relative;
@@ -32,9 +42,9 @@
   background-image: repeating-linear-gradient(
     to right,
     transparent,
-    transparent 60px,
-    rgba(19,100,205,0.1) 60px,
-    rgba(19,100,205,0.1) 61px
+    transparent 64px,
+    rgba(19,100,205,0.1) 64px,
+    rgba(19,100,205,0.1) 65px
   );
   background-size: 100% 100%;
   pointer-events: none;
@@ -43,8 +53,7 @@
 .roomEvents {
   display: flex;
   /*grid-column: 2;*/
-  align-items: flex-end;
-  border-bottom: 2px solid #E9ECEF;
+  align-items: center;
 }
 
 .eventsArea {
@@ -55,6 +64,7 @@
   /*grid-column: 1;*/
   background-color: #fff;
   z-index: 10;
+  max-width: 245px;
 }
 
 .wrapper {
@@ -64,6 +74,7 @@
   grid-template-columns: repeat(2, 2fr);
   grid-column: 1 / 2 span;
   background-color: #F7F8F9;
+  
 }
 
 .floor {
@@ -77,15 +88,23 @@
 
 
 @media screen and (max-width: 460px) {
+  .wrapper {
+    grid-row-gap: 2px;
+  }
   .room {
     min-width: 245px;
-    border-bottom: 2px solid #E9ECEF;
+    /*border-bottom: 2px solid #E9ECEF;*/
   }
   .dateSwitcher {
     max-width: 245px;
   }
   .floor {
     background-color: #F7F8F9;
+  }
+
+  .roomEvents {
+    /*border-bottom: 2px solid #E9ECEF;*/
+    align-items: flex-end;
   }
 }
 
