[feature]: dealing with event tooltip

--- a/src/styles/rooms-timetable.css
+++ b/src/styles/rooms-timetable.css
@@ -100,12 +100,9 @@
 
 
 @media screen and (max-width: 460px) {
-  /*.container {
-    grid-template-areas:
-      "dateSwitcher"
-      "timetable"
-      "wrapper";
-  }*/
+  .container {
+    grid-template-columns: 181px auto;
+  }
 
   .dateSwitcherMobile {
     display: block;
