--- a/src/styles/book-room.css
+++ b/src/styles/book-room.css
@@ -19,6 +19,14 @@
   }
 }
 
+.headline {
+  max-width: 900px;
+  padding-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+
 .content {
   padding: 16px 16px 20px;
 }
@@ -39,6 +47,7 @@
 }
 .timeInputDash {
   padding: 4px;
+  margin-top: 18px;
 }
 
 .footer {
@@ -82,13 +91,24 @@
 
 .infoBlock__datetime {
   grid-area: datetime;
-  display: grid;
+  
 }
 
-@media screen and(max-width: 700px) {
-  .infoBlock__datetime {
+.infoBlock__datetime_wrapper {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  align-items: center;
+  grid-column-gap: 10px;
+}
+
+@media screen and (max-width: 700px) {
+  .infoBlock__datetime_wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .timeInputDash {
+    margin-top: 18px;
   }
 }
 
