--- a/src/styles/date-switcher.css
+++ b/src/styles/date-switcher.css
@@ -25,3 +25,29 @@
 .icon {
   flex-grow: 0;
 }
+
+.datepickerContainer {
+  position: absolute;
+  margin-left: 50px;
+  margin-top: 5px;
+  opacity: 0;
+  cursor: pointer;
+  width: 70%;
+}
+
+.datepicker {
+  position: relative;
+  width: 100%;
+}
+
+.datepicker::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  color: transparent;
+  background: transparent;
+}
