--- a/src/styles/rooms-timetable.css
+++ b/src/styles/rooms-timetable.css
@@ -10,6 +10,8 @@
     "dateSwitcher timetable"
     "wrapper wrapper";
   grid-template-columns: 245px auto;
+  max-width: 100vw;
+  min-width: 100vw;
 }
 
 .dateSwitcher {
@@ -20,7 +22,7 @@
 
 .timetable {
   display: grid;
-  grid-template-columns: repeat(17, 65px);
+  grid-template-columns: repeat(16, 65px);
   grid-row: 1;
   align-items: center;
 
@@ -42,7 +44,7 @@
   position: relative;
   display: grid;
   grid-template-rows: repeat(2, minmax(58px, auto));
-  grid-template-columns: repeat(2, 2fr);
+  grid-template-columns: repeat(2, 0fr);
   grid-column: 1 / 2 span;
   background-color: #F7F8F9;
 }
@@ -63,7 +65,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -14px;
+  left: 0px;
   right: 0;
   content: '';
   background-image: repeating-linear-gradient(
@@ -81,7 +83,9 @@
   display: flex;
   /*grid-column: 2;*/
   align-items: center;
-  transform: translate(-18px, 0);
+  /*transform: translate(-16px, 0);*/
+  /*transform: translate(-67px, 0);*/
+  max-width: 1090px;
 }
 
 .eventsArea {
@@ -93,8 +97,8 @@
   background-color: #fff;
   z-index: 10;
   border-right: 1px solid var(--border-color);
-  min-width: 245px;
-  /*max-width: 245px;*/
+  min-width: 260px;
+  max-width: 260px;
 }
 
 
@@ -125,11 +129,11 @@
     grid-row-gap: 2px;
   }
   .room {
-    min-width: 181px;
+    min-width: 194px;
     /*border-bottom: 2px solid #E9ECEF;*/
   }
   .dateSwitcher {
-    max-width: 181px;
+    max-width: 194px;
     grid-row: 0;
     border-bottom: 1px solid var(--border-color);
     height: 31px;
@@ -153,5 +157,6 @@
   .roomEvents {
     /*border-bottom: 2px solid #E9ECEF;*/
     align-items: flex-end;
+    /*transform: translate(-66px, 0);*/
   }
 }
