--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
-  padding: 15.8px 20.5px 11.3px;
+  padding: 0 20.5px 0;
   align-items: center;
+  min-height: 63px;
 }
 
 .createMeetingBtn {
