--- a/src/styles/rooms-timetable.css
+++ b/src/styles/rooms-timetable.css
@@ -105,6 +105,7 @@
   border-right: 1px solid var(--border-color);
   min-width: 260px;
   max-width: 260px;
+  position: relative;
 }
 
 
@@ -165,4 +166,17 @@
     align-items: flex-end;
     /*transform: translate(-66px, 0);*/
   }
+}
+
+.roomsCollapsed {
+  position: absolute;
+  height: 1000px;
+  width: 200px;
+  z-index: 999999;
+  pointer-events: none;
+
+}
+
+.roomsCollapsedHidden {
+  opacity: 0;
 }
